[package]
name = "egui_gl_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_glow = "0.24.1"
egui = "0.24.1"
windows = { version = "0.52.0", features = ["Win32_System_LibraryLoader", 
                                            "Win32_Foundation", 
                                            "Win32_Graphics_OpenGL", 
                                            "Win32_Graphics_Gdi", 
                                            "Win32_UI_WindowsAndMessaging", 
                                            "Win32_System_SystemServices",
                                            "Win32_UI_Input_KeyboardAndMouse", 
                                            "Wdk_System_SystemInformation", 
                                            "Win32_UI_HiDpi"] }
clipboard = "0.5.0"
thiserror = "1.0.50"
