[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.52.0", features = ["Win32_System_Threading",
                                            "Win32_Foundation",
                                            "Win32_Security",
                                            "Win32_System_Console",
                                            "Win32_UI_WindowsAndMessaging"] }
egui_gl_hook = { path = "../../" }
retour = { version = "0.3.1", features = ["static-detour", "thiscall-abi"] }
egui = "0.24.1"

[profile.release]
lto = "fat"
codegen-units = 1
